@@ -1,5 +1,5 @@
 # -*-cperl-*-
-#  $Id: Pg.pm 10618 2008-01-19 19:04:18Z turnstep $
+#  $Id: Pg.pm 10636 2008-01-22 06:21:35Z turnstep $
 #
 #  Copyright (c) 2002-2008 Greg Sabino Mullane and others: see the Changes file
 #  Portions Copyright (c) 2002 Jeffrey W. Baker
@@ -17,7 +17,7 @@ use 5.006001;
 {
 	package DBD::Pg;
 
-	our $VERSION = '2.0.0_5';;
+	our $VERSION = '2.0.0_6';;
 
 	use DBI ();
 	use DynaLoader ();
@@ -1618,7 +1618,7 @@ DBD::Pg - PostgreSQL database driver for the DBI module
 
 =head1 VERSION
 
-This documents version 2.0.0_5 of the DBD::Pg module
+This documents version 2.0.0_6 of the DBD::Pg module
 
 =head1 SYNOPSIS
 
@@ -1788,7 +1788,7 @@ related to the current handle.
 
 =item B<state>
 
-<  $str = $h->state;
+  $str = $h->state;
 
 Supported by this driver. Returns a five-character "SQLSTATE" code.
 Success is indicated by a "00000" code, which gets mapped to an 
@@ -3582,7 +3582,7 @@ L<DBI>
 
 Quoting will not work properly if standard_conforming_strings is set to 'on', 
 so it is recommended that this be set to 'off' until full support for it can 
-be build into DBD::Pg.
+be built into DBD::Pg.
 
 =head1 AUTHORS
 
