@@ -1,7 +1,7 @@
 ===================================================
 WARNING!!
 
-THIS IS A TEST VERSION (2.0.0_5) AND SHOULD BE USED 
+THIS IS A TEST VERSION (2.0.0_6) AND SHOULD BE USED 
 FOR TESTING PURPOSES ONLY. PLEASE USE A STABLE 
 VERSION (no underscore) BY VISITING:
 
@@ -10,12 +10,12 @@ http://search.cpan.org/~dbdpg/
 
 DBD::Pg  --  the DBI PostgreSQL interface for Perl
 
-# $Id: README 10618 2008-01-19 19:04:18Z turnstep $
+# $Id: README 10636 2008-01-22 06:21:35Z turnstep $
 
 DESCRIPTION:
 ------------
 
-This is version 2.0.0_4 of DBD-Pg.  The web site for this interface is at:
+This is version 2.0.0_6 of DBD-Pg.  The web site for this interface is at:
 
 	http://search.cpan.org/~dbdpg/
 
