@@ -15,41 +15,41 @@ not run its Makefile.PL or Build.PL.
 Hash: RIPEMD160
 
 SHA1 2c4e3d144fc5f69c7dd5d710bed6bf48f1d8a9c4 .perlcriticrc
-SHA1 81a487db31d536ee2065b4e7c19d4468a679cb68 Changes
+SHA1 34cfe2d4e5046f6f612cfff0b3efcd10ca1ec36d Changes
 SHA1 5b9db214d56802150c86eb9dc7d44edd46738220 MANIFEST
-SHA1 91759e7e50e1908ae8a4579675671480dcc1d789 MANIFEST.SKIP
-SHA1 39f00ee7c36a7be3e65451d3bd887b9b50c9fc35 META.yml
-SHA1 8aef55d48cb8aae0e66c5946564fdf9a0bc66cc6 Makefile.PL
+SHA1 41e5f1b5a54fbe0b425fdf711416b7e7bb09d138 MANIFEST.SKIP
+SHA1 a6828967fdbdd658c4bc831bb0253d2019661291 META.yml
+SHA1 5d81f201f61f618513eb79dd0d9c329cdc68fb1c Makefile.PL
 SHA1 f2991c4669223cae5cb13ecb4b5fff2d20a064d0 Pg.h
-SHA1 35cdd16c581a2a1d830be203fcb5c502c0b877b0 Pg.pm
+SHA1 6c7c481b782d476422a076f1e7d542013757b996 Pg.pm
 SHA1 07f9840ff41ad1368060a7a3f1ccfb487cb8b55f Pg.xs
-SHA1 29073500781c16f0ab486a0a5777656997833952 README
+SHA1 8b12419dff87456cde1cd93f5ac2a1502341ffcc README
 SHA1 43b85543cddd09021264864b60528e8aca3aeebc README.dev
 SHA1 968d5fad61bce160b31a9cb1a21dd240b9df930f README.win32
 SHA1 cdeb69c8488d0a87430f2c24a07358213c6de02b TODO
-SHA1 82d9baebbdc02d7f98c866bc3343d71130c7dc31 dbdimp.c
+SHA1 66dd35eb5f4a5ddd81ed8ab8d1615e10262f4a03 dbdimp.c
 SHA1 656eaaa05a5f50f7282d838f44b09cb585a11e60 dbdimp.h
-SHA1 aeb8bcf6c0b2314230ecd4dc3e3e275d972ae195 quote.c
+SHA1 a8a7bba7a62b591ff48abcfb4e89924d554f4314 quote.c
 SHA1 86aa3685c343d4f1a014ccd1ca5cd7d87de48e9b quote.h
 SHA1 b0bb74d7bff1d376f9bfff7e3d7505696b284fe0 t/00-signature.t
 SHA1 3bc6be6dc22d6ed0f1b51108b7786e70bfa99131 t/00basic.t
 SHA1 93b7f2a2fcf005d4cb9391622b2da32d79b7bbf8 t/01connect.t
 SHA1 878c7eb0941f7b19f4a9a61d0d2d9a3321905a96 t/01constants.t
-SHA1 066cbab43381421009f4dcd4d521663df1eebb67 t/02attribs.t
-SHA1 c23a27ff5335752729f5e2f7067a25ba56d51089 t/03dbmethod.t
+SHA1 603844a47b1cfd9a980633356b29afb20a29b8ec t/02attribs.t
+SHA1 1ca3e04b386ac6f625315d0bb012fb2e98e4e4ff t/03dbmethod.t
 SHA1 cd993fb4285df4113967dedf5f1b2b5fc2d7ed12 t/03smethod.t
 SHA1 c6f19cf6642f5f5582668796d3cd3017edd2e0ef t/04misc.t
 SHA1 477ee3896ecd763324da5514380cb91f66ad86d5 t/06bytea.t
 SHA1 14867de37becfd9a1ccf5bc1a2d0683f62878d71 t/07copy.t
 SHA1 a4a21838c94d8799152c0b53ea244fd0d3f99b5b t/08async.t
-SHA1 68200d8282023da6f6a898ca272deb85d11391b4 t/09arrays.t
+SHA1 471d21e8c4ec31e1674191795ce3d580a8b00944 t/09arrays.t
 SHA1 377a603cbbb9aa6c3c816e4292396a31a87e3080 t/12placeholders.t
 SHA1 94541bc74e399793f9045dabf02c05bd186267f7 t/20savepoints.t
 SHA1 877a22e2953d9dfcc6652c8d66931cc031c88543 t/99_perlcritic.t
 SHA1 87a15c775cdf958f35ecd8df37b8ba1e7891acc0 t/99_pod.t
 SHA1 e9e984b3c3366d5cee873f1dc59e2b7c26e744ee t/99_yaml.t
 SHA1 0cbb33eb5cd1971b0bf9a4df834f41f1d9ec9df3 t/99cleanup.t
-SHA1 00b0aa19d0e4a81101a773641035bc3bcffc5fba t/dbdpg_test_setup.pl
+SHA1 83246ff7edc24799e77637d900e9e3f54503ef52 t/dbdpg_test_setup.pl
 SHA1 bc4a58bdd5e853139f9e1fc6129f83e50a07a2c6 t/lib/App/Info.pm
 SHA1 58befda00c12b1721875262505112203bf230450 t/lib/App/Info/Handler.pm
 SHA1 b5bf85b12a5fc207c44113a9c028fb7fbd68531f t/lib/App/Info/Handler/Prompt.pm
@@ -62,7 +62,7 @@ SHA1 ddcc1df34b926ee179bcb57bcf74f893e18bbc63 types.h
 SHA1 f07cd5ecaeb854c81ceb9206364979cf607e6546 win32.mak
 -----BEGIN PGP SIGNATURE-----
 
-iD8DBQFHkknGvJuQZxSWSsgRA3IJAKCRt7ggnDcgYfT/1XHai5pRZwG34gCguF7D
-/LC3Kae34rozCsa7WELfvP0=
-=cjL+
+iD8DBQFHl5KcvJuQZxSWSsgRA8EbAKCbduujQmZdPzj7pgMpNgPZtLp9bwCZARXG
+WKuqaAo3D9Q28WKJlT7s8SM=
+=Z8Lo
 -----END PGP SIGNATURE-----
