@@ -1,6 +1,6 @@
 /*
 
-  $Id: dbdimp.c 10616 2008-01-19 18:58:09Z turnstep $
+  $Id: dbdimp.c 10642 2008-01-23 00:18:35Z turnstep $
 
   Copyright (c) 2002-2008 Greg Sabino Mullane and others: see the Changes file
   Portions Copyright (c) 2002 Jeffrey W. Baker
@@ -16,6 +16,11 @@
 #include "Pg.h"
 #include <math.h>
 #include <wchar.h>
+#include <strings.h>
+
+#ifndef powf
+#define powf (float)pow
+#endif
 
 /* Force preprocessors to use this variable. Default to something valid yet noticeable */
 #ifndef PGLIBVERSION
@@ -103,7 +108,7 @@ int dbd_db_login (SV * dbh, imp_dbh_t * imp_dbh, char * dbname, char * uid, char
 	char *         dest;
 	bool           inquote = DBDPG_FALSE;
 	STRLEN         connect_string_size;
-	ExecStatusType status;
+	ConnStatusType connstatus;
 
 	if (dbis->debug >= 4)
 		(void)PerlIO_printf(DBILOGFP, "dbdpg: dbd_db_login\n");
@@ -185,11 +190,12 @@ int dbd_db_login (SV * dbh, imp_dbh_t * imp_dbh, char * dbname, char * uid, char
 	strncpy(imp_dbh->sqlstate, "25P01", 6); /* "NO ACTIVE SQL TRANSACTION" */
 
 	/* Check to see that the backend connection was successfully made */
-	status = PQstatus(imp_dbh->conn);
-	if (CONNECTION_OK != status) {
-		pg_error(dbh, status, PQerrorMessage(imp_dbh->conn));
+	connstatus = PQstatus(imp_dbh->conn);
+	if (CONNECTION_OK != connstatus) {
+		pg_error(dbh, (ExecStatusType)connstatus, PQerrorMessage(imp_dbh->conn));
 		strncpy(imp_dbh->sqlstate, "08006", 6); /* "CONNECTION FAILURE" */
 		PQfinish(imp_dbh->conn);
+		sv_free((SV *)imp_dbh->savepoints);
 		return 0;
 	}
 
@@ -207,6 +213,7 @@ int dbd_db_login (SV * dbh, imp_dbh_t * imp_dbh, char * dbname, char * uid, char
 	if (imp_dbh->pg_server_version <= 0) {
 		PGresult *result;
 		int	cnt, vmaj, vmin, vrev;
+		ExecStatusType status;
 
 		result = PQexec(imp_dbh->conn, "SELECT version(), 'DBD::Pg'");
 		status = _sqlstate(imp_dbh, result);
@@ -723,6 +730,7 @@ int dbd_db_STORE_attrib (SV * dbh, imp_dbh_t * imp_dbh, SV * keysv, SV * valuesv
 			imp_dbh->pg_bool_tf = newval!=0 ? DBDPG_TRUE : DBDPG_FALSE;
 			return 1;
 		}
+		break;
 
 	case 13: /* pg_errorlevel */
 
@@ -738,6 +746,7 @@ int dbd_db_STORE_attrib (SV * dbh, imp_dbh_t * imp_dbh, SV * keysv, SV * valuesv
 			}
 			return 1;
 		}
+		break;
 
 	case 14: /* pg_prepare_now  pg_enable_utf8 */
 
@@ -754,6 +763,7 @@ int dbd_db_STORE_attrib (SV * dbh, imp_dbh_t * imp_dbh, SV * keysv, SV * valuesv
 			return 1;
 		}
 #endif
+		break;
 
 	case 15: /* pg_expand_array */
 
@@ -761,6 +771,7 @@ int dbd_db_STORE_attrib (SV * dbh, imp_dbh_t * imp_dbh, SV * keysv, SV * valuesv
 			imp_dbh->expand_array = newval ? DBDPG_TRUE : DBDPG_FALSE;
 			return 1;
 		}
+		break;
 
 	case 17: /* pg_server_prepare */
 
@@ -773,6 +784,7 @@ int dbd_db_STORE_attrib (SV * dbh, imp_dbh_t * imp_dbh, SV * keysv, SV * valuesv
 			}
 			return 1;
 		}
+		break;
 
 	case 25: /* pg_placeholder_dollaronly */
 
@@ -780,6 +792,7 @@ int dbd_db_STORE_attrib (SV * dbh, imp_dbh_t * imp_dbh, SV * keysv, SV * valuesv
 			imp_dbh->dollaronly = newval ? DBDPG_TRUE : DBDPG_FALSE;
 			return 1;
 		}
+		break;
 	}
 
 	return 0;
@@ -935,12 +948,13 @@ SV * dbd_st_FETCH_attrib (SV * sth, imp_sth_t * imp_sth, SV * keysv)
 
 		if (strEQ("SCALE", key)) {
 			AV *av = newAV();
+			Oid o;
 			retsv = newRV(sv_2mortal((SV*)av));
 			while(--fields >= 0) {
-				x = PQftype(imp_sth->result, fields);
-				if (PG_NUMERIC==x) {
-					x = PQfmod(imp_sth->result, fields)-4;
-					(void)av_store(av, fields, newSViv(x % (x>>16)));
+				o = PQftype(imp_sth->result, fields);
+				if (PG_NUMERIC == o) {
+					o = PQfmod(imp_sth->result, fields)-4;
+					(void)av_store(av, fields, newSViv(o % (o>>16)));
 				}
 				else {
 					(void)av_store(av, fields, &sv_undef);
@@ -1019,10 +1033,11 @@ SV * dbd_st_FETCH_attrib (SV * sth, imp_sth_t * imp_sth, SV * keysv)
 		if (strEQ("PRECISION", key)) {
 			AV *av = newAV();
 			int sz = 0;
+			Oid o;
 			retsv = newRV(sv_2mortal((SV*)av));
 			while(--fields >= 0) {
-				x = PQftype(imp_sth->result, fields);
-				switch (x) {
+				o = PQftype(imp_sth->result, fields);
+				switch (o) {
 				case PG_BPCHAR:
 				case PG_VARCHAR:
 					sz = PQfmod(imp_sth->result, fields);
@@ -1090,6 +1105,7 @@ int dbd_st_STORE_attrib (SV * sth, imp_sth_t * imp_sth, SV * keysv, SV * valuesv
 			imp_sth->async_flag = SvIV(valuesv);
 			return 1;
 		}
+		break;
 
 	case 14: /* pg_prepare_now */
 
@@ -1097,6 +1113,7 @@ int dbd_st_STORE_attrib (SV * sth, imp_sth_t * imp_sth, SV * keysv, SV * valuesv
 			imp_sth->prepare_now = strEQ(value,"0") ? DBDPG_FALSE : DBDPG_TRUE;
 			return 1;
 		}
+		break;
 
 	case 15: /* pg_prepare_name */
 
@@ -1107,6 +1124,7 @@ int dbd_st_STORE_attrib (SV * sth, imp_sth_t * imp_sth, SV * keysv, SV * valuesv
 			imp_sth->prepare_name[vl] = '\0';
 			return 1;
 		}
+		break;
 
 	case 17: /* pg_server_prepare*/
 
@@ -1114,6 +1132,7 @@ int dbd_st_STORE_attrib (SV * sth, imp_sth_t * imp_sth, SV * keysv, SV * valuesv
 			imp_sth->server_prepare = strEQ(value,"0") ? DBDPG_FALSE : DBDPG_TRUE;
 			return 1;
 		}
+		break;
 
 	case 25: /* pg_placeholder_dollaronly */
 
@@ -1121,6 +1140,7 @@ int dbd_st_STORE_attrib (SV * sth, imp_sth_t * imp_sth, SV * keysv, SV * valuesv
 			imp_sth->dollaronly = SvTRUE(valuesv) ? DBDPG_TRUE : DBDPG_FALSE;
 			return 1;
 		}
+		break;
 	}
 
 	return 0;
@@ -2251,12 +2271,16 @@ SV * pg_stringify_array(SV *input, const char * array_delim, int server_version)
 			}
 			else {
 				sv_catpv(value, "\"");
+				if (SvUTF8(svitem))
+					SvUTF8_on(value);
 				string = SvPV(svitem, svlen);
 				while (svlen--) {
-					sv_catpvf(value, "%s%c", /* upgrades to utf8 for us */
-							  '\"'==*string ? "\\" : 
-							  '\\'==*string ? "\\\\" :
-							  "", *string);
+					if ('\"' == *string)
+						sv_catpvn(value, "\\", 1);
+					if ('\\' == *string) {
+						sv_catpvn(value, "\\\\", 2);
+					}
+					sv_catpvn(value, string, 1);
 					string++;
 				}
 				sv_catpv(value, "\"");
@@ -3060,7 +3084,6 @@ AV * dbd_st_fetch (SV * sth, imp_sth_t * imp_sth)
 				/* When we have Perl 5.7.3 or better as a pre-req:
 				   sv_copypv(currph->inout, AvARRAY(av)[i]);
 				*/
-				STRLEN len;
 				const char * const s = SvPV(AvARRAY(av)[i],len);
 				sv_setpvn(currph->inout, s, len);
 				if (SvUTF8(AvARRAY(av)[i]))
@@ -3172,7 +3195,7 @@ static int dbd_st_deallocate_statement (SV * sth, imp_sth_t * imp_sth)
 				New(0, cmd, SvLEN(sp) + 13, char); /* Freed below */
 				if (dbis->debug >= 4)
 					(void)PerlIO_printf(DBILOGFP, "dbdpg: Rolling back to savepoint %s\n", SvPV_nolen(sp));
-				sprintf(cmd,"rollback to %s",SvPV_nolen(sp));
+				sprintf(cmd, "rollback to %s", SvPV_nolen(sp));
 				strncpy(tempsqlstate, imp_dbh->sqlstate, strlen(imp_dbh->sqlstate)+1);
 				status = _result(imp_dbh, cmd);
 				Safefree(cmd);
@@ -3618,7 +3641,7 @@ int pg_db_rollback_to (SV * dbh, imp_dbh_t * imp_dbh, char * savepoint)
 	if (imp_dbh->pg_server_version < 80000)
 		croak("Savepoints are only supported on server version 8.0 or higher");
 
-	sprintf(action,"rollback to %s",savepoint);
+	sprintf(action, "rollback to %s", savepoint);
 
 	/* no action if AutoCommit = on or the connection is invalid */
 	if ((NULL == imp_dbh->conn) || (DBIc_has(imp_dbh, DBIcf_AutoCommit)))
@@ -3651,7 +3674,7 @@ int pg_db_release (SV * dbh, imp_dbh_t * imp_dbh, char * savepoint)
 	if (imp_dbh->pg_server_version < 80000)
 		croak("Savepoints are only supported on server version 8.0 or higher");
 
-	sprintf(action,"release %s",savepoint);
+	sprintf(action, "release %s", savepoint);
 
 	/* no action if AutoCommit = on or the connection is invalid */
 	if ((NULL == imp_dbh->conn) || (DBIc_has(imp_dbh, DBIcf_AutoCommit)))
